# AudioAgent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod
client/: API.md  audio.go  global.go  main.go  mux.go  voices.go
cmd/AudioNode/: main.go
cmd/testtool/: go.mod  main.go
keyboard/: .envrc  go.mod  main.go
lib/logger/: logger.cpp  logger.h  main_test.bash  main_test.cpp
lib/pcmaudio/: engine.cpp  engine.h  launcher_test.bash  launcher_test.cpp  main_test.bash  main_test.cpp  play.bash  reader.cpp  reader.h  ring_test.bash  ring_test.cpp  wave.cpp  wave.h
pkg/api/: audio.go  voices.go
pkg/app/: app.go
pkg/dll/: global.go
pkg/mux/: mux.go
pkg/types/: backgroundwriter.go  backgroundwriter_test.go  types.go
src/: api.cpp  api.h  audiocore.cpp  audiocore.h  audioloop.cpp  audioloop.h  commandloop.cpp  commandloop.h  context.h  dllmain.cpp  global.cpp  logloop.cpp  logloop.h  notification.cpp  sfxloop.cpp  sfxloop.h  soundloop.cpp  soundloop.h  types.h  voiceinfo.cpp  voiceloop.cpp  voiceloop.h
tools/: build.bat
